Styling the new date pickers

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -23,6 +23,7 @@
 @import "objects/_page";
 @import "objects/_home";
 @import "objects/_form";
+@import "objects/_datepicker";
 @import "objects/_nav";
 @import "objects/_preview";
 @import "objects/_about";
