--- a/src/scss/objects/_form.scss
+++ b/src/scss/objects/_form.scss
@@ -44,6 +44,7 @@
 
 .select {
 	background: $secondary url('./images/arrows.svg') no-repeat 97% 0 !important;
+	cursor: pointer;
 }
 
 .select-disabled {
