Tweaking datepicker styling.

--- a/src/scss/objects/_form.scss
+++ b/src/scss/objects/_form.scss
@@ -43,8 +43,11 @@
 }
 
 .select {
-	background: $secondary url('./images/arrows.svg') no-repeat 97% 0 !important;
+	background: $secondary url('./images/arrows.svg') no-repeat 98% 0 !important;
 	cursor: pointer;
+	@include bp(medium) {
+		background-position: 97% 0 !important;
+	}
 }
 
 .select-disabled {
