--- a/src/scss/objects/_form.scss
+++ b/src/scss/objects/_form.scss
@@ -226,3 +226,27 @@
 .touchevents .btn--remove {
 	opacity: 1;
 }
+
+//placeholders for Form
+
+:placeholder {
+	opacity: 1;
+	color: $placeholder;
+}
+
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+	opacity: 1;
+  color: $placeholder;
+}
+::-moz-placeholder { /* Firefox 19+ */
+	opacity: 1;
+  color: $placeholder;
+}
+:-ms-input-placeholder { /* IE 10+ */
+	opacity: 1;
+  color: $placeholder;
+}
+:-moz-placeholder { /* Firefox 18- */
+	opacity: 1;
+  color: $placeholder;
+}
