--- a/src/index.css
+++ b/src/index.css
@@ -126,6 +126,7 @@ button {
   border: none;
   appearance: none;
   background: none;
+  border-radius: 0;
   margin: 0;
   padding: 0; }
   button:hover {
