--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -1,30 +1,29 @@
 // Bourbon.io w/ Neat
-@import "bourbon";
-@import "neat";
+@import 'bourbon';
+@import 'neat';
 
 // Variables
-@import "_vars";
+@import '_vars';
 
 // Generic
-@import "generic/_reset";
-@import "generic/_clearfix";
-@import "generic/_responsive";
+@import 'generic/_reset';
+@import 'generic/_clearfix';
+@import 'generic/_responsive';
 
 // Base
-@import "base/_main";
-@import "base/_typography";
-@import "base/_images";
-@import "base/_links";
-@import "base/_headings";
-@import "base/_btn";
-@import "base/_animation";
+@import 'base/_typography';
+@import 'base/_images';
+@import 'base/_links';
+@import 'base/_headings';
+@import 'base/_btn';
+@import 'base/_animation';
 
 // Objects
-@import "objects/_page";
-@import "objects/_home";
-@import "objects/_form";
-@import "objects/_nav";
-@import "objects/_preview";
-@import "objects/_about";
-@import "objects/_print";
-@import "objects/_error";
+@import 'objects/_page';
+@import 'objects/_home';
+@import 'objects/_form';
+@import 'objects/_nav';
+@import 'objects/_preview';
+@import 'objects/_about';
+@import 'objects/_print';
+@import 'objects/_error';
